name:                usless
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/eliethewoody/usless-#readme
license:             BSD3
license-file:        LICENSE
author:              Maksim Kaganovich
maintainer:          eliethewoody@ya.ru
copyright:           2017 Maksim Kaganovich
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , TLDL.ExampleOfTLDLSession
                     , TLDL.Interpreter
                     , USLS.MOperators
                     , USLS.Usless
  build-depends:       base >= 4.7 && < 5
                     , split
  default-language:    Haskell2010

executable usless-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , usless
                     , split
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/usless
